minor bugs on small screen solved

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,6 +1,6 @@
-// .hideIt{
-//     display: none !important;
-// }
+.hideIt{
+    display: none !important;
+}
 // button.navbar-toggler:nth-of-type(3){
 //     display: none !important;
 // }
